fix the message after vote message sending, fix textarea hidden after focus it. fix spacing in after-vote form

--- a/modules/after-vote/after-vote.less
+++ b/modules/after-vote/after-vote.less
@@ -2,6 +2,7 @@
 	.after-vote-form{
 		max-width: 600px;
 		margin: 0 auto;
+		padding-bottom: 20px;
 		&,textarea{
 			display: none;
 		}
@@ -22,7 +23,7 @@
 	.after-vote-form.vote-message-sent *:not(.vote-message-sent-text){
 		display: none;
 	}
-	.vote-message-sent-text {
+	/*.vote-message-sent-text {
 		font-size: 28px;
-	}
+	}*/
 }
